# practice

./: .gitignore  .gitmodules  readme.txt
blog/: Eigen笔记之一：表达式模板.md  code  code.cpp  picture.dio  test
blog/EigenNote/: Eigen笔记之一：表达式模板.md
cuda/: Page_Locked_Memory.cu  deviceprop.cu  gemm.cu  main.cu  test.cu  thrustMain.cu
cuda/benchMark/: deviceprop.cu  dram_bandwidth.cu  l2cache_bandwidth.cu
cuda/elementwise/: add.cu
cuda/feature/: CMakeLists.txt  profile1.cu
cuda/gemm/: gemm.cu
cuda/histogram/: histogram.cu
cuda/reduce/: arraySum.cu
geometry and martrix/: array.h  array_2.h  array_2_inl.h  macros.h  type_helpers.h  vector.h  vector3.h  vector_3_inl.h  ztest.cpp
leetcode/: 10.cpp  101.cpp  104.cpp  105.cpp  11.cpp  114.cpp  136.cpp  139.cpp  14.cpp  141.cpp  142.cpp  148.cpp  15.cpp  152.cpp  17.cpp  2.cpp  20.cpp  200.cpp  207.cpp  208.cpp  234.cpp  236.cpp  239.cpp  279.cpp  283.cpp  287.cpp  297.cpp  3.cpp  300.cpp  309.cpp  31.cpp  312.cpp  32.cpp  322.cpp  33.cpp  34.cpp  377.cpp  39.cpp  394.cpp  406.cpp  (+33 more)
leetcode/MultiThread/: 1114.cpp  test
leetcode/hot100/: 102.cpp  105.cpp  114.cpp  121.cpp  124.cpp  128.cpp  146.cpp  15.cpp  155.cpp  160.cpp  169.cpp  198.cpp  20.cpp  206.cpp  215.cpp  22.cpp  221.cpp  226.cpp  238.cpp  240.cpp  301.cpp  309.cpp  322.cpp  347.cpp  377.cpp  388.cpp  399.cpp  416.cpp  42.cpp  46.cpp  494.cpp  5.cpp  56.cpp  617.cpp  62.cpp  621.cpp  739.cpp  75.cpp  76.cpp  96.cpp  (+1 more)
leetcode/linkList/: linklist-19.cpp  linklist-24.cpp
leetcode/soft/: quicksoft.cpp
parallel_lecture/week1/: helloworld_mpi.cpp
parallel_lecture/week2/: ex15.cpp  ex19.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex8.cpp
parallel_lecture/week3/: ex1.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp
proxy/: .clang-tidy  proxy.h  test  test.cpp  test2.cpp  test3.cpp
simd/: CMakeLists.txt  countp.cpp  main  main.cpp  print.h  saxpy.cpp  simd_print.h  sum.cpp
stl/: std_enable_shared_from_this.h  std_function.cpp  std_shared_ptr.cpp  std_shared_ptr.h  std_sp_counted_base.h  std_weak_ptr.h  test  test.cpp
stl/minor_stl/: heap.cpp  minor_shared_ptr.h  test  test.cpp
test/: test  test.cpp  testC++23.cpp  testConcet.cpp  testCrtp.cpp  testForLoopSpeed.cpp  testLambda.cpp  testLamda.cpp  testSfinea.cpp  testStdFunction.cpp  testStdVariant.cpp  testStruct.cpp  testThread.cpp  testUsing.cpp  test_shared_ptr.cpp  testdpcpp.cpp  testfriendclass.cpp
test/scalarExpressionTemplate/: ScalarFieldOp.h  ScalarFieldOpTest  ScalarFieldOpTest.cpp  test
test/stl/: testStdVariant.cpp
week 1/: For_OpenMP_Construct.cpp  helloworld.cpp  test.cpp
week2/: ex1.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  ex14.cpp  ex16.cpp  ex17.cpp  ex18.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex9.cpp
week3/: ex2.cpp  ex7.cpp  test.cpp
